tests/ui/error-codes/E0718.stderr
error: the `lang = "owned_box"` attribute cannot be used on statics
  --> $DIR/E0718.rs:4:3
   |
LL | #[lang = "owned_box"]
   |   ^^^^^^^^^^^^^^^^^^
   |
   = help: the `lang = "owned_box"` attribute can only be applied to structs

error: aborting due to 1 previous error

